# prize_race

./: .gitignore  README.md  vercel.json
.kiro/steering/: senior-dev-rules.md
backend/: .env  .env.example  .gitignore  Dockerfile  PrizeRace_PRD_Senior_UZ.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.db
backend/app/: config.py  database.py  main.py  middleware.py  models.py  schemas.py
backend/app/api/v1/: auth.py  events.py  router.py  tasks.py  wallet.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  middleware.py  security.py
backend/app/models/: __init__.py  enums.py  event.py  participant.py  task.py  task_completion.py  user.py
backend/app/repositories/: base.py  event_repository.py  participant_repository.py  task_repository.py  user_repository.py
backend/app/routes/: auth.py  events.py  tasks.py  wallet.py
backend/app/schemas/: __init__.py  event.py  participant.py  task.py  task_completion.py  user.py  wallet.py
backend/app/services/: anti_fraud.py  anti_fraud_service.py  channel_service.py  leaderboard_service.py  sync_service.py  tarantool_service.py  telegram_service.py  ton_service.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 0001_initial_schema.py
backend/scripts/: check_health.py  create_superuser.py  finish_expired_events.py  seed_dev_data.py
backend/tarantool/: init.lua
backend/tests/: conftest.py  test_anti_fraud.py  test_auth.py  test_events.py  test_http_auth.py  test_http_events.py  test_http_tasks.py  test_participants.py  test_tasks.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.css  App.tsx
old_frontend/: index.html  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
(+83 files in other folders)
